# plicp_wrapper

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: f_trfm_odom.txt
include/csm/: algos.h  laser_data.h  sm_config.h  sm_options.h
include/egsl/: egsl.h  gsl_eigen.h
include/gpc/: gpc_utils.h
include/plicp/: plicp_node.hpp
launch/: calibration.launch
scripts/: draw_iteration.py  draw_result.py
src/: plicp_node.cpp  plicp_wrapper.cpp
src/csm/: laser_data.cpp  logging.cpp  orientation.cpp  sm_config.cpp
src/gpc/: gpc.cpp  gpc_utils.cpp
src/icp/: icp.cpp  icp_corr_dumb.cpp  icp_corr_tricks.cpp  icp_covariance.cpp  icp_loop.cpp
